# fullstack_todo_app

./: .gitignore  DEPLOYMENT_GUIDE.md  FIXES_APPLIED.md  PASSWORD_ISSUE_EXPLAINED.md  README.md  docker-compose.yml  pyproject.toml
.claude/skills/: fastapi.md
backend/: Dockerfile  debug_bcrypt.py  pyproject.toml  test_api_scenario.py  test_complete_flow.py  test_truncation.py  test_validation.py
backend/app/: database.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: task.py  user.py
backend/app/routers/: tasks.py  users.py
backend/app/utils/: jwt.py
backend/todo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/__tests__/: auth.test.tsx  tasks.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/tasks/: page.tsx
frontend/app/test-auth/: page.tsx
frontend/components/: AuthContextProvider.tsx  Header.tsx  ProtectedRoute.tsx
frontend/components/ui/: badge.tsx
frontend/hooks/: useTasks.ts
frontend/lib/: api-client.ts
frontend/utils/: auth-utils.ts  token-manager.ts
history/prompts/: PHR-0001-fix-uvicorn-asgi-error.red.prompt.md
history/prompts/constitution/: 1-create-todo-app-constitution.constitution.prompt.md
history/prompts/general/: 0001-full-stack-todo-app-completion.general.prompt.md
specs/1-todo-app/: spec.md  tasks.md
(+9 files in other folders)
